# vmp-rl

./: .gitignore  Makefile.am  configure.ac  execute.sh
app/: Makefile.am  lmon16f.c  main.c  nmon_cpu.c  nmon_net.c  rpc-client.c  rpc-server.c  vmp-daemon.c
include/: rl_config.h.in
src/: Makefile.am  client.c  pbrpc_client.c  pbrpc_server.c
src/ipcs/: ipc_shared.c  ipc_shared.h
src/load/: load.h  load_child.c  load_child.h  load_core.c  load_core.h  load_demo.c  load_demo.h  load_node_state.c  load_node_state.h  load_system.c  load_system.h  load_typedef.h  load_vmon.c  load_vmon.h
src/pbc/: pbrpc-clnt.c  pbrpc-clnt.h  pbrpc-svc.c  pbrpc-svc.h
src/rpc/: clnt_demo.c  clnt_demo.h  clnt_node_state.c  clnt_node_state.h  clnt_server_registry.c  clnt_server_registry.h  clnt_vmon.c  clnt_vmon.h  pbrpc_client.c  pbrpc_client.h  pbrpc_server.c  pbrpc_server.h  rpc_clnt.c  rpc_clnt.h  rpc_server_info.c  rpc_server_info.h  rpc_svc.c  rpc_svc.h  rpc_typedef.h  service-demo.c  service-demo.h  service-node-state.c  service-node-state.h  service-server-registry.c  service-server-registry.h  service-typedef.h  service-vmon.c  service-vmon.h
src/rpc/pbc/: compile_pbc.sh  pbrpc-clnt.c  pbrpc-clnt.h  pbrpc-svc.c  pbrpc-svc.h  pbrpc.pb-c.c  pbrpc.pb-c.h  pbrpc.proto
src/rpc/service/: pbc-demo-clnt.c  pbc-demo-service.c  pbc-demo.pb-c.c  pbc-demo.pb-c.h  pbc-demo.proto  pbc-nstatus.pb-c.c  pbc-nstatus.pb-c.h  pbc-nstatus.proto  pbc-registry.pb-c.c  pbc-registry.pb-c.h  pbc-registry.proto  pbc-vmon.pb-c.c  pbc-vmon.pb-c.h  pbc-vmon.proto  service-gather.h  service-registry.c  service-workload.c  workload-clnt.c  workload.pb-c.c  workload.pb-c.h  workload.proto
src/service/: service-workload.c  service-workload.h
src/support/: globals.c  globals.h  mod_log.c  mod_log.h  module_config.c  module_config.h  module_log.c  module_log.h  module_support.h
src/vmp/: vmp.h  vmp_log.h  vmp_nmon.c  vmp_nmon.h  vmp_process.c  vmp_process.h  vmp_thread.h  vmp_typedef.h
